# arie_react_portfolio_website

./: .gcloudignore  .gitignore  JOB_TAILOR_UPDATES.md  README.md  app.yaml  package-lock.json  package.json
.githooks/: pre-commit
.github/workflows/: deploy.yml
projects/rag_ops_platform/: Makefile  docker-compose.yml
projects/rag_ops_platform/backend/: .env.example  pyproject.toml
projects/rag_ops_platform/backend/app/: config.py  main.py  schemas.py  telemetry.py
projects/rag_ops_platform/backend/app/eval/: harness.py  llm_judge.py
projects/rag_ops_platform/backend/app/observability/: tracing.py
projects/rag_ops_platform/backend/app/rag/: embeddings.py  generator.py  guardrails.py  pipeline.py  source_router.py
projects/rag_ops_platform/backend/app/storage/: vector_store.py
projects/rag_ops_platform/backend/scripts/: ingest_all_sources.py  ingest_chicago_crimes.py  ingest_nyc311.py  ingest_sec_companyfacts.py
projects/rag_ops_platform/backend/tests/: test_api.py  test_source_router.py
projects/rag_ops_platform/frontend/: app.js  index.html  styles.css
projects/snowflake_finance_ai_command_center/: Dockerfile  app.py  pipeline.py  requirements.txt
projects/snowflake_finance_ai_command_center/sql/: mart_account_risk.sql  mart_finance_kpis.sql  mart_finance_variance_bridge.sql  (+3 more)
public/: index.html
resume/: Arie_Resume_general.md
scripts/: sync-resume-from-portfolio.cjs
src/: App.jsx  app.scss  context.js  data.js  global.scss  index.js
src/auth/: AuthContext.jsx
src/components/: PortfolioWorks.jsx  Sections.jsx  firebase.js
(+47 files in other folders)
