[project]
name = "rag-ops-platform"
version = "0.1.0"
description = "Production-style RAG API with guardrails, evaluation, and telemetry"
readme = ""
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "openai>=1.52.0",
  "langsmith>=0.1.125",
  "psycopg[binary]>=3.2.0",
  "scikit-learn>=1.5.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
